--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="error">ERROR</string>
     <string name="connection_error">Connection Error!</string>
     <string name="internet_error">Please check your internet connection!</string>
+    <string name="species">Species</string>
+    <string name="location">Location</string>
+    <string name="gender">Gender</string>
+    <string name="status">Status</string>
 </resources>
